Updated conf for supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -30,5 +30,12 @@ serverurl=unix:///tmp/supervisor.sock         ; use a unix:// URL  for a unix so
 directory = /opt/apps/rockit-server
 user = pi
 command = /opt/apps/rockit-server/start.sh
-stdout_logfile = /opt/apps/logs/gunicorn/project-std.log
-stderr_logfile = /opt/apps/logs/gunicorn/project-err.log
+stdout_logfile = /opt/apps/logs/rockit-server/rockit-server.log
+stderr_logfile = /opt/apps/logs/rockit-server/rockit-server-error.log
+
+[program:celeryd]
+directory = /opt/apps/rockit-server
+user = pi
+command = python manage.py celery worker -l info -B 
+stdout_logfile = /opt/apps/logs/rockit-server/celeryd.log
+stderr_logfile = /opt/apps/logs/rockit-server/celeryd-error.log
