--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "requirejs": "~2.1.15",
     "requirejs-domready": "~2.0.1",
     "toastr": "~2.1.0"
+  },
+  "resolutions": {
+    "angular": "1.3.8"
   }
 }
