--- a/bower.json
+++ b/bower.json
@@ -16,16 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "Bootflat": "~2.0.4",
-    "Selecter": "~3.2.4",
-    "angular-route": "~1.3.6",
-    "angular-translate-loader-partial": "~2.5.2",
-    "angular-translate": "~2.5.2",
-    "font-awesome": "~4.2.0",
-    "modernizer": "~2.8.2",
-    "requirejs": "~2.1.15",
-    "requirejs-domready": "~2.0.1",
-    "toastr": "~2.1.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-resource": "~1.3.8",
+    "clockpicker": "https://github.com/weareoutman/clockpicker.git#gh-pages",
+    "bootstrap": "~3.3.1"
   },
   "resolutions": {
     "angular": "1.3.8"
