--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,16 @@
     "angular-bootstrap": "~0.12.0",
     "angular-resource": "~1.3.8",
     "clockpicker": "https://github.com/weareoutman/clockpicker.git#gh-pages",
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "font-awesome": "~4.3.0",
+    "Selecter": "~3.2.4",
+    "Bootflat": "~2.0.4",
+    "requirejs": "~2.1.15",
+    "modernizer": "~2.8.2",
+    "toastr": "~2.1.0"
   },
   "resolutions": {
-    "angular": "1.3.8"
+    "angular": "1.3.8",
+    "font-awesome": "~4.3.0"
   }
 }
