--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,11 @@
     "Bootflat": "~2.0.4",
     "requirejs": "~2.1.15",
     "modernizer": "~2.8.2",
-    "toastr": "~2.1.0"
+    "toastr": "~2.1.0",
+    "requirejs-domready": "~2.0.1",
+    "angular-route": "~1.3.11",
+    "angular-translate": "~2.5.2",
+    "angular-translate-loader-partial": "~2.5.2"
   },
   "resolutions": {
     "angular": "1.3.11",
