Updated destroy action

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [unix_http_server]
 file=/tmp/supervisor.sock                       ; path to your socket file
- 
+
 [supervisord]
 logfile=/opt/apps/logs/supervisor/supervisord.log    ; supervisord log file
 logfile_maxbytes=50MB                           ; maximum size of logfile before rotation
@@ -12,13 +12,13 @@ minfds=1024                                     ; number of startup file descrip
 minprocs=200                                    ; number of process descriptors
 user=root                                       ; default user
 childlogdir=/opt/apps/logs/supervisor/          ; where child log files will live
- 
+
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
- 
+
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock         ; use a unix:// URL  for a unix socket
- 
+
 ; This is where you run individual Tornado instances.
 ; We run four; one per processor core.
 ; In development, we ran as many as four per core with no issues.
@@ -36,6 +36,6 @@ stderr_logfile = /opt/apps/logs/rockit-server/rockit-server-error.log
 [program:celeryd]
 directory = /opt/apps/rockit-server
 user = pi
-command = python manage.py celery worker -l info -B 
+command = python manage.py celery worker -l warn -B
 stdout_logfile = /opt/apps/logs/rockit-server/celeryd.log
 stderr_logfile = /opt/apps/logs/rockit-server/celeryd-error.log
