Added warn loglevel for celery

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -36,6 +36,6 @@ stderr_logfile = /opt/apps/logs/rockit-server/rockit-server-error.log
 [program:celeryd]
 directory = /opt/apps/rockit-server
 user = pi
-command = python manage.py celery worker -l warn -B
+command = python manage.py celery worker -l WARN -B
 stdout_logfile = /opt/apps/logs/rockit-server/celeryd.log
 stderr_logfile = /opt/apps/logs/rockit-server/celeryd-error.log
